-Card color picker added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
 
+    <string name="str_select_label_color">Select Label Color</string>
+
 </resources>
