--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
 
     <string name="str_select_label_color">Select Label Color</string>
 
+    <string name="default_notification_channel_id">proman_notification_channel_id</string>
+
 </resources>
